# model-predictive-controller

./: CMakeLists.txt  CODEOWNERS  README.md  build.sh  run.sh
src/: MPC.cpp  MPC.h  aux.h  main.cpp  mpc.cpp  mpc.h
